# Producer_consumer_problem

./: BlockingQueue.hpp  CMakeLists.txt  Consumer.hpp  Producer.hpp  README.md  Task.hpp  main.cpp
utilities/: SafeCout.hpp  UniqueIDGenerator.hpp
